Update some book text

--- a/resources/assets/tconstruct/book/en_us/language.lang
+++ b/resources/assets/tconstruct/book/en_us/language.lang
@@ -1,11 +1,11 @@
 // Sections
 intro=Introduction
-materials=Tool materials
-bowmaterials=Bow materials
+materials=Tool Materials
+bowmaterials=Bow Materials
 tools=Tools
 modifiers=Modifiers
 smeltery=Smeltery
-seared_furnace=Seared Furnace
+seared_furnace=Furnace
 tinker_tank=Tinker Tank
 
 repairing=Repairing
